--- a/FrontEnd/Feed/css/style.css
+++ b/FrontEnd/Feed/css/style.css
@@ -324,7 +324,7 @@ header > .center{
     
     background-color: #ffffff;
     width: 100%;
-    height: 54.8em;
+    height: auto;
     border-radius: 0.3em;
 
     border: 1px solid #D1D1D1;
