--- a/FrontEnd/TelaCadastro/css/estilo.css
+++ b/FrontEnd/TelaCadastro/css/estilo.css
@@ -79,7 +79,7 @@ main{
     color: #FFFFFF; 
     margin-bottom: 1em; 
     border: 0;
-    border-radius: 6px;
+    border-radius: 3px;
     background-color: #2686CC;
 }
 .register-btn:focus{
@@ -136,3 +136,42 @@ main{
 .images-app{
     margin-top: 20px;
 }
+
+.content-f{
+    display: flex;
+    
+}
+
+.content-f p{
+    color: #909090;
+    font-size: 13px;
+    margin-top: 28px;
+    align-items: center;
+}
+
+
+hr{
+    border: 0;
+    border-top: 1.3px solid #CBCBCB;
+    margin-top: 36px;
+    height: 0;
+    width: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 7px;
+    margin-right: 7px;
+}
+
+
+.esqueceu-senha h1{
+    color: #2686CC;
+    font-size: 14px;
+    font-weight: normal;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 35px;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+}
+
