--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,50 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
-}
+    ViewData["Title"] = "Login";
+ }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+     <main>
+        <section class="form-section">
+            <div class="box-main"> 
+                <div class="imagem-logo">
+                       <img src="img/img_logo.svg alt=">
+                   </div>
+                <form>
+                    <div class="register">
+                        <input type="email" id="entrar-email" placeholder="Email" class="input"> 
+                    </div>
+                    
+                    <div class="register">
+                        <input type="password" id="entrar-senha" placeholder="Senha" class="input"> 
+                    </div>
+                    
+                    <button class="register-btn">Entrar</button>
+                </form>
+
+                <div class="content-f">
+                    <hr>
+                    <p>OU</p>
+                    <hr>
+                </div>
+
+                <div class="esqueceu-senha">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
+                    <h1>Esqueceu a senha?</h1>
+                </div>
+            </div>
+
+            <section class="extra-section">
+                <div class="connect">
+                    <p>Não tem uma conta?&nbsp<a href="../TelaCadastro/Index.html">Cadastre-se</a></p>
+                </div>
+                
+                <div class="app">
+                    <p>Obtenha o aplicativo.</p>
+                    <div class="images-app">
+                        <a href="https://apps.apple.com/br/app/instagram/id389801252"><img src="..~/TelaCadastro/img/app_store 1.png" alt="Obter o aplicativo pela App Store"></a> <!-- o "scr" é onde colocamos a imagem || o "alt" é onde descrevemos a imagem -->
+                        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=pt_BR&gl=US"><img src="..~/TelaCadastro/img/google_play 1.png" alt="Obter o aplicativo pela Google Play"></a><!-- o "scr" é onde colocamos a imagem || o "alt" é onde descrevemos a imagem -->
+                    </div>
+                </div>
+                
+            </section>
+                
+        </section>
+    </main>
