--- a/wwwroot/css/estilo.css
+++ b/wwwroot/css/estilo.css
@@ -1,177 +1,1 @@
-@import url('http://fonts.cdnfonts.com/css/billabong'); 
-@import url('//db.onlinewebfonts.com/c/623c7118249e082fe87a78e08506cb4b?family=Segoe+UI'); 
-
-*{ 
-    box-sizing: border-box; 
-    margin: 0; 
-    padding: 0; 
-    outline: none; 
-    text-decoration: none; 
-    text-decoration: none;
-}
-:root{ 
-    --background: #FAFAFA;
-}
-main{ 
-    width: 100%; 
-    
-
-    display: flex; 
-    justify-content: center;
-    align-items: center; 
-    height: 100vh; 
-    background-color: var(--background); 
-}
-.form-section{ 
-    width: 350px;
-    height: 684px; 
-   
-}
-.box-main{
-    margin-top: -25px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #ffffff;
-    border: 1px solid #dddcdc;
-    padding: 20px;
-}
-.title{ 
-    font-family: 'billabong', serif; 
-    font-weight: normal;
-    font-size: 4.5em; 
-    margin-bottom: 0; 
-    user-select: none;
-}
-.pre-form{
-    margin-bottom: 1em;
-}
-.pre-form p{
-    margin-bottom: 4px;
-    font-size: 16px;
-    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    color: #777777;
-}
-.input{ 
-    width: 100%; 
-    height: 40px; 
-    margin-bottom: 10px; 
-    background-color: #FAFAFA; 
-    border: 1px solid #EFEFEF; 
-    font-size: 13px; 
-    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-    color: black;
-    border-radius: 3px; 
-    padding: 10px; 
-}
-.input:focus{ 
-    border: 1px solid #B2B2B2; 
-}
-.register-btn{ 
-    width: 300px; 
-    height: 35px; 
-    font-family: 'Segoe UI', Tahoma, Verdana, serif;
-    font-weight: bolder;
-    font-size: 15px;
-    color: #FFFFFF; 
-    margin-bottom: 1em; 
-    border: 0;
-    border-radius: 3px;
-    background-color: #2686CC;
-}
-.register-btn:focus{
-    background-color: #32a0ee;
-    animation-duration: 0ms;
-}
-.pos-form{
-    margin-top: 10px;
-}
-.pos-form p{
-    margin-bottom: 4px;
-    font-size: 13px;
-    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-    display: flex;
-    justify-content: center;
-    color: #AFAFAF;
-}
-.pos-form a{
-    font-weight: bolder;
-    color: #9b9b9b;
-}
-.pos-form a:hover{
-    color: #777777;
-}
-.extra-section{
-    margin-top: 1em;
-    width: 350px;
-    height: 200px;
-    font-size: 14px;
-    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-  
-}
-.connect{
-    height: 80px;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #dddcdc;
-}
-.connect a{
-    color: #2686CC;
-}
-.app{
-    height: 120px;
-    margin-top: 0.2em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
- 
-}
-.images-app{
-    margin-top: 20px;
-}
-
-.content-f{
-    display: flex;
-    
-}
-
-.content-f p{
-    color: #909090;
-    font-size: 13px;
-    margin-top: 28px;
-    align-items: center;
-}
-
-
-hr{
-    border: 0;
-    border-top: 1.3px solid #CBCBCB;
-    margin-top: 36px;
-    height: 0;
-    width: 120px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 7px;
-    margin-right: 7px;
-}
-
-
-.esqueceu-senha h1{
-    color: #2686CC;
-    font-size: 14px;
-    font-weight: normal;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin-top: 35px;
-    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-}
-
+@font-face{font-family:BillabongW00-Regular;src:url(//db.onlinewebfonts.com/t/6d32b8e06f40fb7698cfb714b9e7975d.eot);src:url(//db.onlinewebfonts.com/t/6d32b8e06f40fb7698cfb714b9e7975d.eot?#iefix) format("embedded-opentype"),url(//db.onlinewebfonts.com/t/6d32b8e06f40fb7698cfb714b9e7975d.woff2) format("woff2"),url(//db.onlinewebfonts.com/t/6d32b8e06f40fb7698cfb714b9e7975d.woff) format("woff"),url(//db.onlinewebfonts.com/t/6d32b8e06f40fb7698cfb714b9e7975d.ttf) format("truetype"),url(//db.onlinewebfonts.com/t/6d32b8e06f40fb7698cfb714b9e7975d.svg#BillabongW00-Regular) format("svg")}*{box-sizing:border-box;margin:0;padding:0;outline:0;text-decoration:none;text-decoration:none}:root{--mainBackground:#FAFAFA;--squareBackground:#FFFFFF;--squareBorders:#DBDBDB;--preFormLetters:#8E8E8E;--inputBordersNotClicked:#EEEEEE;--inputBorderClicked:#A7A7A7;--inputLetters:#8D9191;--buttonsLetters:#FFFFFF;--buttonsNotClicked:#0095f6;--buttonsClicked:#4CB5F9;--posFormLetters:#8B8D9B;--posFormHyperLinkLetters:#898E8B;--buttonQuestion:#0095f6;--textFont:'Segoe UI',Tahoma,Verdana,sans-serif}main{width:100%;display:flex;justify-content:center;align-items:center;height:100vh;background-color:var(--mainBackground)}.form-section{width:350px;height:684px}.box-main{margin-top:-25px;display:flex;flex-direction:column;align-items:center;background-color:var(--squareBackground);border:1px solid var(--squareBorders);padding:20px}.register-title{height:75px;font-family:var(--titleFont);font-weight:400;font-size:3.7em;margin-bottom:0;user-select:none}.pre-form{margin-bottom:1em}.pre-form p{margin-bottom:4px;font-size:16px;font-family:var(--textFont);font-weight:700;display:flex;justify-content:center;color:var(--preFormLetters)}.input{width:100%;height:40px;margin-bottom:10px;background-color:var(--mainBackground);border:1px solid var(--inputBordersNotClicked);font-size:13px;font-family:var(--textFont);color:var(--inputLetters);border-radius:3px;padding:10px}.input:focus{border:1px solid var(--inputBorderClicked)}.error{color:#00e01e}.register-btn{width:300px;height:35px;font-family:var(--textFont);font-weight:bolder;font-size:15px;color:var(--buttonsLetters);margin-bottom:1em;border:0;border-radius:6px;background-color:var(--buttonsNotClicked)}.register-btn:focus{background-color:var(--buttonsClicked);animation-duration:0s}.pos-form{margin-top:10px}.pos-form p{margin-bottom:4px;font-size:13px;font-family:var(--textFont);display:flex;justify-content:center;color:var(--posFormLetters)}.pos-form a{font-weight:500;color:var(--posFormHyperLinkLetters)}.extra-section{margin-top:1em;width:350px;height:200px;font-size:14px;font-family:var(--textFont)}.connect{height:80px;background-color:var(--squareBackground);display:flex;flex-direction:column;justify-content:center;align-items:center;border:1px solid var(--squareBorders)}.connect a{color:var(--buttonQuestion)}.app{height:120px;margin-top:.2em;display:flex;flex-direction:column;justify-content:center;align-items:center}.images-app{margin-top:20px}
