--- a/Views/Home/Logar.cshtml
+++ b/Views/Home/Logar.cshtml
@@ -33,7 +33,7 @@
 
             <section class="extra-section">
                 <div class="connect">
-                    <p>Não tem uma conta?&nbsp<a asp-area="Ir para a tela de Cadastro" asp-controller="User" asp-action="Register">Cadastre-se</a></p>
+                    <p>Não tem uma conta?&nbsp<a asp-area="Ir para a tela de Cadastro" asp-controller="User" asp-action="Registered">Cadastre-se</a></p>
                 </div>.
                 
                 <div class="app">
