--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,34 +1,47 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - InstaDev</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    <title>Pág Perfil</title>
+    <link rel="stylesheet" href="css/perfil.css">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">InstaDev</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+        <div class="center">    
+    
+            <div class="logo-header">
+                <a href="#"><img src="img/Instadev.svg" alt="logo Instadev"></a>
+            </div> <!-- logo da header -->
+            
+    
+            <div class="search">
+    
+                <div class="search-box">
+    
+                    <i class="fas fa-search"></i>
+                    <input placeholder="Pesquisar" type="text" name="busca">
+    
+                </div><!-- search-box-->
+                
+            </div> <!-- search-->
+            
+    
+            <div class="notify">
+                
+                <a href="#"><img src="img/Vector.svg"></a>
+                <a href="#"><img src="img/plane 1.svg"></i></a>
+                <a href="#"><i class="far fa-compass"></i></i></a>
+                <a href="#"><i class="far fa-heart"></i></a>
+    
+                <div class="img-miniatura"><img src="img/79763607_516843355604052_5614717620805127920_n.jpg"  ></div>
+            </div><!--icones-->
+    
+        </div><!--center div de centralizar-->
+        </header>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
