--- a/Views/Login/logar.cshtml
+++ b/Views/Login/logar.cshtml
@@ -8,7 +8,7 @@
                 <div class="imagem-logo">
                        <img src="img/img_logo.svg" alt="Logo InstaDev">
                    </div>
-                <form>
+                <form method="POST" action='@Url.Action("Logar")' class="cadastro">
                     <div class="register">
                         <input type="email" id="entrar-email" placeholder="Email" class="input"> 
                     </div>
@@ -17,7 +17,7 @@
                         <input type="password" id="entrar-senha" placeholder="Senha" class="input"> 
                     </div>
                     
-                    <button class="register-btn">Entrar</button>
+                    <button class="register-btn" type="submit">Entrar</button>
                 </form>
 
                 <div class="content-f">
@@ -33,11 +33,11 @@
 
             <section class="extra-section">
                 <div class="connect">
-                    <p>Não tem uma conta?&nbsp<a asp-area="Ir para a tela de Cadastro" asp-controller="User" asp-action="Registered">Cadastre-se</a></p>
-                </div>.
+                    <p>Não tem uma conta?&nbsp<a asp-controller="User" asp-action="Registered"> Cadastre-se </a></p>
+                </div>
                 
                 <div class="app">
-                    <p>Obtenha o aplicativo.</p>
+                    <p> Obtenha o aplicativo.</p>
                     <div class="images-app">
                         <a href="https://apps.apple.com/br/app/instagram/id389801252"><img src="~/img/app_store 1.png" alt="Obter o aplicativo pela App Store"></a> <!-- o "scr" é onde colocamos a imagem || o "alt" é onde descrevemos a imagem -->
                         <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=pt_BR&gl=US"><img src="~/img/google_play 1.png" alt="Obter o aplicativo pela Google Play"></a><!-- o "scr" é onde colocamos a imagem || o "alt" é onde descrevemos a imagem -->
