--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -122,8 +122,17 @@ main{
     border: 1px solid #dddcdc;
 }
 .connect a{
+    font-size: 14px;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
     color: #2686CC;
 }
+
+.connect p{
+    color: #353535;
+    font-size: 14px;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+}
+
 .app{
     height: 120px;
     margin-top: 0.2em;
@@ -133,6 +142,13 @@ main{
     align-items: center;
  
 }
+
+.app p{
+    color: #353535;
+    font-size: 14px;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+}
+
 .images-app{
     margin-top: 20px;
 }
