Back de login finalizado

--- a/Views/Login/login.cshtml
+++ b/Views/Login/login.cshtml
@@ -33,7 +33,7 @@
 
             <section class="extra-section">
                 <div class="connect">
-                    <p>Não tem uma conta?&nbsp<a asp-controller="User" asp-action="Registered"> Cadastre-se </a></p>
+                    <p>Não tem uma conta?&nbsp<a asp-controller="User" asp-action="Index"> Cadastre-se </a></p>
                 </div>
                 
                 <div class="app">
