Botao desativar conta

--- a/Views/EditarPerfil/Index.cshtml
+++ b/Views/EditarPerfil/Index.cshtml
@@ -81,7 +81,7 @@
                 </div>
                 <div class="inferior">
                     <button>Enviar</button>
-                    <a href="#">Desativar minha conta definitivamente</a>
+                    <a asp-area="link para excluir equipe" asp-controller="EditarPerfil" asp-action="Excluir">Desativar minha conta definitivamente</a>
                 </div>
             </div>
         </section>
