Css adicionado Img logo alterada

--- a/Views/User/Registered.cshtml
+++ b/Views/User/Registered.cshtml
@@ -6,8 +6,10 @@
     <section class="form-section"> 
         
         <div class="box-main">
-            <h1 class="register-title">InstaDev</h1> 
+           
             <div class="pre-form">
+
+                <h1 class="register-title"><img src="/img/img_logo.svg" alt=""></h1>
                 <p>Cadastre-se para ver fotos e</p>
                 <p>vídeos dos seus amigos.</p>
             </div>
