--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <title>Pág Perfil</title>
     <link rel="stylesheet" href="css/perfil.css">
     <link rel="stylesheet" href="~/css/register.css"/>
+    <link rel="stylesheet" href="~/css/EdicaoPerfil.css"/>
+
 </head>
 <body>
     <header>
