--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/perfil.css">
     <link rel="stylesheet" href="~/css/Register.css"/>
     <link rel="stylesheet" href="~/css/EdicaoPerfil.css"/>
+    <link rel="stylesheet" href="~/css/login.css"/>
 
 </head>
 
