--- a/Views/Login/login.cshtml
+++ b/Views/Login/login.cshtml
@@ -18,6 +18,7 @@
                     </div>
                     
                     <button class="register-btn" type="submit">Entrar</button>
+                    <div class="erro">@TempData.Peek("Mensagem")</div>
                 </form>
 
                 <div class="content-f">
