--- a/Views/Perfil/Index.cshtml
+++ b/Views/Perfil/Index.cshtml
@@ -1,148 +1,104 @@
 @{
-    ViewData["Title"] = "Perfil";
+    ViewData["Title"] = "Instadev G6 | Perfil";
 }
 
-
-        <main class="fundo">
-            <div class="pag">
-                <section class="info-perfil">
-                    <div class="foto-perfil">
-                        <div class="foto-center">
-                            <div class="foto-borda">
-                                <img alt="Foto de perfil" src="img/79763607_516843355604052_5614717620805127920_n.jpg" style="width: 160px;">
-                            </div>
-                        </div>
+<section id="info">
+    <div class="info-container">
+        <div class="info-content">
+            <img src="~/img/perfil/@ViewBag.UserLogado.Foto" alt="foto de perfil">
+            <div class="info-text">
+                <div class="username">
+                    <h1>@ViewBag.UserLogado.Username</h1>
+                </div>
+                <div class="info-numbers">
+                    <p>0 publicações</p>
+                    <p>128 seguindo</p>
+                    <p>214 seguidores</p>
+                </div>
+                <div class="description">
+                    <p><strong>@ViewBag.UserLogado.Nome</strong></p>
+                    <div class="options">
+                        <a asp-area="" asp-controller="EditarPerfil" asp-action="Index" title="Editar perfil">Editar perfil</a>
+                        <a asp-area="" asp-controller="Login" asp-action="Deslogar" title="Sair">Sair</a>
                     </div>
-                    <section class="texto-perfil">
-                        <div class="nome-perfil">
-                            <h2>marcos_roberto</h2>
-                            <a class="engrenagem-perfil" 
-                            href="../EdicaoPerfil/Index.html"><img src="img/Engrenagem.editt.svg" alt="Engrenagem">
-                            </a>
-
-                        </div>
-                        <ul class=links-perfil>
-                            <li class="pss">
-                                <span class="numero-perfil">1</span>
-                                publicações
-                            </li>
-                            <li class="pss">
-                                <span class="numero-perfil">125</span>
-                                seguindo
-
-                            </li>
-                            <li class="pss">
-                                <span class="numero-perfil">214</span>
-                                seguidores
-
-                            </li>
-                        </ul>
-                        <div class="bio-perfil">
-                            <h1 class="bio">Marcos</h1>
-                            <ul class="botao-sair"> 
-                                <li>
-                                    <a class="sair-perfil" href="../TelaLogin/Index.html">Sair</a>
-                                </li>
-
-                            </ul>
-                        </div>
-                    </section>
-                </section>
+                </div>
             </div>
-
-            <section class="publi">
-                <div class="pag publi-flex">
-                <img src="img/Publicacao.svg" alt="publi">
-                    
-                <span class=texto-p>Publicações</span>
-                </div>
-            </section>
-
-            <section class="feed-perfil">
-                <div class="pag feed-flex">
-                    <img src="img/Rectangle 4.jpg" alt="foto">
-                </div>
-
-                
-                <div class="foto-perfil-menor">
-                    <div class="foto-center-menor">
-                        <div class="foto-borda">
-                            <img alt="Foto de perfil" src="img/79763607_516843355604052_5614717620805127920_n.jpg" style="width: 60px;">
+        </div>
+    </div>
+</section>
+<div class="menu-posts">
+    <div class="menu-profile">
+        <div class="menu-text">
+            <img src="./img/img-perfil/squares.svg" alt="">
+            <p>Publicações</p>
+        </div>
+    </div>
+</div>
+<article id="posts">
+    <div class="posts-container">
+        <div class="posts-content">
+            @foreach (Publicacao p in ViewBag.PublicacoesUser)
+            {
+                <div class="post-profile">
+                    <img src="~/img/publicacoes/@p.Imagem" alt="">
+                    <div class="post-info">
+                        <div class="interaction">
+                            <div class="user-info">
+                                @* Imagem do usuario dono do perfil *@
+                                <img src="~/img/perfil/@ViewBag.UserLogado.Foto" alt="">
+                                <div class="username-and-location">
+                                    <h2>@ViewBag.UserLogado.Username</h2>
+                                    <p>Rio de Janeiro, Brazil</p>
+                                </div>
+                            </div>
+                            <div class="like-and-comment">
+                                <img id="1" src="./img/img-perfil/like.svg" alt="" onclick="curtir(1)">
+                                <img src="./img/img-perfil/comment.svg" alt="">
+                            </div>
+                            <p>1954 curtidas</p>
+                            <ul class="comments">
+                                <li>
+                                    <div class="comment">
+                                        <div class="comments-text">
+                                            <h3>fausto_silva</h3>
+                                            <p>Esse cara é fera bixo</p>
+                                        </div>
+                                        <img id="2" src="./img/img-perfil/like.svg" alt="" onclick="curtir(2)">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="comment">
+                                        <div class="comments-text">
+                                            <h3>yes_baby</h3>
+                                            <p>thank you</p>
+                                        </div>
+                                        <img id="3" src="./img/img-perfil/like.svg" alt="" onclick="curtir(3)">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="comment">
+                                        <div class="comments-text">
+                                            <h3>adriano_stark</h3>
+                                            <p>Quando eu adormecer, vou sonhar com você. É sempre você.</p>
+                                        </div>
+                                        <img id="4" src="./img/img-perfil/like.svg" alt="" onclick="curtir(4)">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="comment">
+                                        <div class="comments-text">
+                                            <h3>yes_baby</h3>
+                                            <p>thank you</p>
+                                        </div>
+                                        <img id="5" src="./img/img-perfil/like.svg" alt="" onclick="curtir(5)">
+                                    </div>
+                                </li>
+                            </ul>
+                            <p id="view-all-comments">Ver todos os 585 comentários</p>
                         </div>
                     </div>
-
-                <div class="div-comentarios">
-                      
-                    <div class="posicao">
-                        <img src="img/coracao.svg" class="espaco-img" alt="Coração">
-                        <img src="img/Mensagem.svg" alt="Mensagem">
-                        <ul class="curtidas-perfil">
-                            <li class="curtidas-tamanho">
-                                <span class="numero-curtidas">1954</span> curtidas
-                            </li>
-                        </ul>
-                        
-                    </div>
-
-                    <!-- Comentarios -->
-                    <div class="comentarios-perfil">
-                        <div class="coment-perfil">
-                            <ul class="pessoas-coment">
-                                <span class="pessoas-perfil">fausto_silva</span> Esse cara é ferá bixo!!! 
-                            
-                            </ul>
-                            <img src="img/coracaomenor.svg" alt="curtida">
-                        </div>
-                     </div><!-- Final -->
-
-                     <div class="comentarios-perfil">
-                        <div class="coment-perfil">
-                            <ul class="pessoas-coment2">
-                                <span class="pessoas-perfil">yes_bay</span> Thank you
-                            
-                            </ul>
-                            <img src="img/coracaomenor.svg" alt="curtida">
-                        </div>
-                     </div><!-- Final -->
-
-                     <div class="comentarios-perfil">
-                        <div class="coment-perfil">
-                            <ul class="pessoas-coment3">
-                                <span class="pessoas-perfil">adriano_stark</span> Quando eu adormecer,vou sonhar com você.<br> É sempre você
-                            
-                            </ul>
-                            <img src="img/coracaomenor.svg" alt="curtida">
-                        </div>
-                     </div><!-- Final -->
-
-                     <div class="comentarios-perfil">
-                        <div class="coment-perfil">
-                            <ul class="pessoas-coment4">
-                                <span class="pessoas-perfil">yes_baby</span> Yes_baby
-                            
-                            </ul>
-                            <img src="img/coracaomenor.svg" alt="curtida">
-                        </div>
-                     </div><!-- Final -->
-
-                     <div class="comentarios-perfil">
-                        <div class="coment-perfil">
-                            <ul>
-                                <span class="outros-comentario">Ver todos os 585 comentários</span>
-                            
-                            </ul>
-                        </div>
-                     </div><!-- Final -->
                 </div>
-
-                </div>
-                <div class="nome-cidade">
-                    <div>
-                        <h1 class="tamanho-nome">Marcos</h1>
-                        <span class="tamanho-cidade">Rio de Janeiro</span>
-                    </div>
-            
-                </div>
-
-            </section>
-        </main>
+            }
+        </div>
+    </div>
+</article>
