--- a/Views/EditarPerfil/Index.cshtml
+++ b/Views/EditarPerfil/Index.cshtml
@@ -46,7 +46,7 @@ ViewData["Title"] = "EditarPerfil";
                     <input value="@ViewBag.UserLogado.DataNascimento" name="DataNascimento" type="text" required></input>   
                 </div>
                 <div class="enviar">
-                    <button class="botao" type="submit">Enviar</button>
+                    <a href="Perfil/Index.cshtml"><button class="botao" type="submit">Enviar</button></a>
                     <a class="desativar" asp-area="" asp-controller="EditarPerfil" asp-action="Excluir" asp-route-id="@ViewBag.UserLogado.IdUsuario" title="Página de cadastro">Desativar minha conta definitivamente</a>
                 </div>
             </div>
