--- a/Views/Feed/Index.cshtml
+++ b/Views/Feed/Index.cshtml
@@ -74,7 +74,7 @@
                         <img src="~/img/perfil/@p.FotoUsuario" alt="Foto do perfil do amigo Gabi Gordo">
                         <div class="texto">
                             <p class="nome-publicacao">@ViewBag.UsernamePost</p>
-                            <p>Flamengo, RJ</p>
+                            <p>SENAI</p>
                         </div>
                     </ul>
                 </div>
@@ -104,21 +104,21 @@
                 </div>
                 <div class="coments">
                     <ul class="flex-center">
-                        <h4>gabigordo</h4>
+                        <h4>Confia</h4>
                         <p>
-                            <span class="cerquilha">#flamengo</span> Amo vocês mil milhões S2</p>
+                            <span class="cerquilha">#Confia</span>Confia</p>
                     </ul>
                 </div>
                 <div class="coments">
                     <ul class="flex-center">
-                        <h4>yes_baby</h4>
-                        <p>thank you </p>
+                        <h4>Position</h4>
+                        <p>Absolute</p>
                     </ul>
                 </div>
                 <div class="coments">
                     <ul class="flex-center">
-                        <h4>king_pele</h4>
-                        <p>Esses são bons de bola, entende?</p>
+                        <h4>Blond Joseph</h4>
+                        <p>F</p>
                     </ul>
                 </div>
             </div>
